check and store individual AutoSkip categories
