# common/models/rest-api.ts
@@ -1,6 +1,6 @@
 import { Grants } from "../permissions";
 import { ServerMessageEvent } from "./messages";
-import { BehaviorOption, QueueMode, RoomSettings, RoomUserInfo, Visibility } from "./types";
+import { BehaviorOption, QueueMode, RoomSettings, RoomUserInfo, SegmentCategories, Visibility } from "./types";
 import { QueueItem, Video, VideoId } from "./video";
 
 export type OttResponseBody<T = unknown, E extends OttApiError = OttApiError> =
@@ -53,6 +53,7 @@ export interface OttApiResponseGetRoom extends RoomSettings {
 	queue: QueueItem[];
 	hasOwner: boolean;
 	grants: Grants;
+	autoSkipSegmentCategories: SegmentCategories;
 	/** @deprecated */
 	permissions: Grants;
 	autoSkipSegments: boolean;
