# docs/api.yaml
@@ -106,6 +106,10 @@ paths:
                             type: number
                       autoSkipSegments:
                         type: boolean
+                      autoSkipSegmentCategories:
+                        type: array
+                        items: 
+                          type: string
                       users:
                         type: array
                         items:
@@ -166,6 +170,7 @@ paths:
                     required:
                       - grants
                       - autoSkipSegments
+                      - autoSkipSegmentCategories
                       - users
                       - visibility
                       - title
@@ -202,6 +207,10 @@ paths:
                       $ref: "#/components/schemas/queuemode"
                     autoSkipSegments:
                       type: boolean
+                    autoSkipSegmentCategories: 
+                      type: array
+                      items:
+                        type: string
                     grants:
                       description: Map of role numbers to the bitmask of permissions that role has
                         been granted
