# server/storage/room.ts
@@ -105,6 +105,7 @@ function dbToRoomArgs(db: DbRoom): RoomOptions {
 		grants: new permissions.Grants(db.permissions),
 		userRoles: new Map<Role, Set<number>>(),
 		autoSkipSegments: db.autoSkipSegments,
+		autoSkipSegmentCategories: db.autoSkipSegmentCategories,
 		prevQueue: db.prevQueue,
 		restoreQueueBehavior: db.restoreQueueBehavior,
 		enableVoteSkip: db.enableVoteSkip,
@@ -131,6 +132,7 @@ export function roomToDb(room: RoomStatePersistable): Omit<RoomAttributes, "id">
 		"visibility": room.visibility,
 		"queueMode": room.queueMode,
 		"autoSkipSegments": room.autoSkipSegments,
+		"autoSkipSegmentCategories": room.autoSkipSegmentCategories,
 		"permissions": grantsFiltered.toJSON(),
 		"ownerId": null,
 		"role-trusted": [],
@@ -166,6 +168,7 @@ export function roomToDbPartial(
 			visibility: room.visibility,
 			queueMode: room.queueMode,
 			autoSkipSegments: room.autoSkipSegments,
+			autoSkipSegmentCategories: room.autoSkipSegmentCategories,
 			prevQueue: room.prevQueue,
 			restoreQueueBehavior: room.restoreQueueBehavior,
 			enableVoteSkip: room.enableVoteSkip,
